feat: use sonar cloud and linter (#49)