@@ -1,9 +1,13 @@
 package io.autoinvestor.infrastructure.repositories;
 
-import io.autoinvestor.domain.events.Event;
 import io.autoinvestor.domain.EventStore;
+import io.autoinvestor.domain.events.Event;
 import io.autoinvestor.domain.model.User;
 import io.autoinvestor.domain.model.UserId;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.context.annotation.Primary;
 import org.springframework.context.annotation.Profile;
 import org.springframework.data.domain.Sort;
@@ -11,10 +15,6 @@ import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.stereotype.Repository;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
 
 @Repository
 @Primary
@@ -32,20 +32,16 @@ public class MongoEventStoreRepository implements EventStore {
 
     @Override
     public void save(User user) {
-        List<EventDocument> docs = user.getUncommittedEvents()
-                .stream()
-                .map(mapper::toDocument)
-                .collect(Collectors.toList());
+        List<EventDocument> docs =
+                user.getUncommittedEvents().stream().map(mapper::toDocument).toList();
         template.insertAll(docs);
     }
 
     @Override
     public User get(UserId userId) {
-        Query q = Query.query(
-                        Criteria.where("aggregateId")
-                                .is(userId.value())
-                )
-                .with(Sort.by("version"));
+        Query q =
+                Query.query(Criteria.where("aggregateId").is(userId.value()))
+                        .with(Sort.by("version"));
 
         List<EventDocument> docs = template.find(q, EventDocument.class, COLLECTION);
 
@@ -53,9 +49,7 @@ public class MongoEventStoreRepository implements EventStore {
             return null;
         }
 
-        List<Event<?>> events = docs.stream()
-                .map(mapper::toDomain)
-                .collect(Collectors.toList());
+        List<Event<?>> events = docs.stream().map(mapper::toDomain).collect(Collectors.toList());
 
         return User.from(events);
     }
